# wizapi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
wizapi/: wiz.py  wiz2.py
wizapi/tests/: test_ut_wiz.py
