[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wizapi"
version = "1.0.0"
authors = [
  { name="alam", email="mailtoalam1@gmail.com"},
]
description = "This module provides a Python interface for making API calls to the Wiz."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]